Location editor bugs uncovered in WP 2.7.1 testing.
git-svn-id: https://wordpress-geo-mashup.googlecode.com/svn/trunk/geo-mashup@566 81465218-ea22-0410-8f2b-2343bde7f0e1

--- a/jquery-ui.1.6.smoothness.css
+++ b/jquery-ui.1.6.smoothness.css
@@ -12,6 +12,9 @@
 */
 
 
+/* Interaction Cues
+----------------------------------*/
+.ui-state-highlight, .ui-widget-content .ui-state-highlight {border: 1px solid #fcefa1; background: #fbf9ee url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x; color: #363636; }
 
 /*UI accordion*/
 .ui-accordion {
